--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@next/third-parties": "^15.0.0",
     "framer-motion": "^11.8.0",
     "next": "14.2.13",
     "react": "^18",
