--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@hookform/resolvers": "^3.9.0",
     "@next/third-parties": "^15.0.0",
     "framer-motion": "^11.8.0",
-    "next": "14.2.13",
+    "next": "^14.2.22",
+    "next-intl": "^3.26.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
